# Isolinear

./: .gitignore  CMakeLists.txt  IsoMPD.sh  Isolinear.sh  Makefile  build.sh  conanfile.txt  debug.sh  isompd.sh  mpdxx.sh
cmake/: FindLibMPDClient.cmake
include/isolinear/: button.h  buttonbar.h  colours.h  compass.h  compasslayout.h  control.h  display.h  drawable.h  elbo.h  event.h  geometry.h  grid.h  header.h  init.h  keyboardevent.h  layout.h  mpd.h  mpdclient.h  pointerevent.h  progressbar.h  shapes.h  sweep.h  text.h  theme.h  timer.h  ui.h  view.h  window.h
include/isolinear/mpd/: playercontrolbar.h
include/isompd/: mpd.h
include/isompd/mpd/: playercontrolbar.h
include/mpdxx/: mpdxx.h
include/mpdxx/mpdxx/: client.h  entities.h
oldsrc/: colours.h  drawing.h  elbo.cpp  elbo.h  geometry.h  grid.cpp  grid.h  main.cpp  sdlcreate.h  window.cpp
src/: button.cpp  button.h  buttonbar.h  colours.cpp  colours.h  drawable.h  drawing.h  elbo.cpp  elbo.h  frame.h  gameoflife.cpp  geometry.cpp  geometry.h  grid.cpp  grid.h  header.h  isompd.cpp  kitchensink.cpp  main.cpp  mpd.h  mpdclient.h  mpdxx.cpp  newbo.h  pointerevent.h  sdlcreate.cpp  shapes.h  sweep.h  table.cpp  table.h  template.cpp  testdialog.cpp  testfiles.cpp  testgrid.cpp  testregion.cpp  testwindows.cpp  text.h  timers.cpp  types.h  window.cpp  window.h
